# langgraph-example-monorepo

./: .env.example  .gitignore  README.md  langgraph.json
all_projects/my_project/project_one/: pyproject.toml
all_projects/my_project/project_one/my_agent/: main.py
all_projects/my_project/project_one/my_agent/utils/: build_graph.py
all_projects/project_two/: pyproject.toml  requirements.txt
all_projects/project_two/my_other_agent/: main.py
all_projects/project_two/my_other_agent/utils/: build_graph.py
my_agent/: main.py
