[tool.poetry]
name = "my-agent"
version = "0.0.1"
description = "An excellent agent build for LangGraph cloud."
authors = ["Polly the parrot <1223+polly@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
langgraph = "^0.2.0"
langchain-openai = ">=0.1.17"
langchain-community = ">=0.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"